--- a/css/style.css
+++ b/css/style.css
@@ -267,7 +267,7 @@ navigation section
 /* ==========================================================================
 home section
 ========================================================================== */
-#home {
+#inicio {
   background-size: cover;
   background-position: center;
   color: #ffffff;
@@ -280,16 +280,16 @@ home section
   height: 100vh;
   text-align: center;
 }
-#home h1 {
+#inicio h1 {
   font-size: 40px;
 }
-#home h3 {
+#inicio h3 {
   font-size: 14px;
 }
-#home hr {
+#inicio hr {
   width: 240px;
 }
-#home .btn {
+#inicio .btn {
   background: transparent;
   border: 4px solid #ffffff;
   border-radius: 0;
@@ -302,15 +302,15 @@ home section
   margin-right: 16px;
   transition: all 0.4s ease-in-out;
 }
-#home .btn:hover {
+#inicio .btn:hover {
   background: #00c6d7;
   border-color: transparent;
 }
-#home .btn-danger {
+#inicio .btn-danger {
   background: #00c6d7;
   border-color: transparent;
 }
-#home .btn-danger:hover {
+#inicio .btn-danger:hover {
 	border: 4px solid #ffffff;
   	border-radius: 0;
 	background: transparent;
@@ -699,14 +699,14 @@ footer p {
 media quires for mobile
 ========================================================================== */
 @media (max-width: 440px) {
-  #home {
+  #inicio {
     padding-top: 320px;
     padding-bottom: 320px;
   }
-  #home h1 {
+  #inicio h1 {
     font-size: 22px;
   }
-  #home h3 {
+  #inicio h3 {
     font-size: 12px;
   }
 }
